--- a/src/components/Headings/Heading.module.scss
+++ b/src/components/Headings/Heading.module.scss
@@ -32,10 +32,6 @@
   text-align: center;
 }
 
-.ratesHeadingTitle {
-  text-align: left;
-}
-
 .tradeHeading {
   margin-top: -4.6rem;
   font-size: 1.75rem;
