--- a/src/components/RatesTable/RatesTable.module.scss
+++ b/src/components/RatesTable/RatesTable.module.scss
@@ -11,6 +11,8 @@
   border-radius: 2rem;
   background: $white;
   box-shadow: 0px 50px 100px $ratesBoxShadow;
+  height: 24rem;
+  padding: 1rem;
 }
 .ratesHeaderRow {
   margin: 0;
@@ -19,15 +21,51 @@
   background-color: transparent;
 }
 
-.tableColumn,
 .ratesTableColumn {
-  padding: 3rem 0.1rem 3rem 0.1rem;
+  margin: 0;
+  padding: 3rem -2rem 3rem 0.1rem;
   overflow-wrap: break-word;
+  align-items: center;
 }
 
-.ratesTableColumn {
-  margin-left: 5rem;
+.tableColumn {
+  padding: 0;
+  margin: 0;
 }
+
+.ratesColumns {
+  padding: 0;
+}
+
+.ratesColumnSingle {
+  margin: 0;
+  padding: 0;
+}
+
+.scrollBar {
+  margin-right: 0.5rem;
+  height: 11rem;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: $gradient1;
+}
+
+.scrollBar::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+.scrollBar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
 td {
   padding-bottom: 1rem;
 }
@@ -82,6 +120,7 @@ td {
   .ratesCard {
     margin: 0 auto;
     width: 100%;
+    height: auto;
   }
 }
 
@@ -89,6 +128,7 @@ td {
   .ratesCard {
     margin: 0 auto;
     width: 100%;
+    height: auto;
   }
 }
 
@@ -97,9 +137,9 @@ td {
     width: 90vw;
     margin-left: -4rem;
   }
-  .ratesTableColumn {
-    margin-left: 2rem;
-  }
+  // .ratesTableColumn {
+  //   margin-left: 1rem;
+  // }
 }
 
 @media only screen and (min-width: 1600px) {
@@ -108,7 +148,7 @@ td {
     width: 80vw;
     margin-left: -12.5rem;
   }
-  .ratesTableColumn {
-    margin-left: 6rem;
-  }
+  // .ratesTableColumn {
+  //   margin-left: 6rem;
+  // }
 }
